--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "sharp": "^0.34.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
